add upcoming championhios and tusted

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -59,7 +59,7 @@
   "experience_rugby_sport": "Rugby",
   "experience_rugby_country": "Spain",
   "experience_rugby_story": "We went for the tournament... and came back with stitches from laughing so much. The organization was impeccable: from the first email to the last beer. It's clear that the people behind it understand rugby, what a third time is really like, and what we veterans need to enjoy without pressure. We played intense but not crazy games, ate like kings, and the hotel even had space to stretch after the matches (although some of us used it for naps). We'd go back with our eyes closed. Oh, and we won the prize for the team with the most time on the bar. Well deserved.",
-  "experience_rugby_name": "Carlos “Chino” R., captain of Valencia Veterans RFC",
+  "experience_rugby_name": "Carlos 'Chino' R., captain of Valencia Veterans RFC",
   "experience_hockey_male_team": "Amsterdam HC",
   "experience_hockey_male_sport": "Hockey Masculino",
   "experience_hockey_male_country": "Netherlands",
@@ -73,5 +73,21 @@
   "counters_teamsTrustedUs": "Teams that trusted us",
   "counters_playersImpacted": "Players impacted",
   "counters_queriesAnswered": "Queries answered",
-  "counters_countriesReached": "Countries reached"
+  "counters_countriesReached": "Countries reached",
+  "contact_tournament_message": "Hello, I would like more information about the tournament \"{{tournament}}\". Thank you!",
+  "upcoming_tournaments_title": "Upcoming Tournaments",
+  "upcoming_tournaments_description": "We are organizing the following tournaments in the next months. If you are interested in participating, please contact us.",
+  "trusted_teams_title": "Trusted Teams",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Masculine team, national league.",
+  "trusted_teams_description_2": "Female team, regional champions.",
+  "trusted_teams_description_3": "Senior team, international friendly matches.",
+  "upcoming_tournaments_title_1": "Valencia Hockey Cup",
+  "upcoming_tournaments_description_1": "From 10 to 12 May, Valencia. Category sub-18 and absolute.",
+  "upcoming_tournaments_title_2": "Rugby Summer Fest",
+  "upcoming_tournaments_description_2": "From 20 to 22 June, playa de la Malvarrosa.",
+  "upcoming_tournaments_title_3": "International Female Tournament",
+  "upcoming_tournaments_description_3": "From 5 to 7 July, municipal polideportive."
 }
