--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,22 +1,22 @@
 {
-    "welcome": "Bienvenido",
-      "contact_title": "Contacto",
-      "contact_subtitle": "Contáctanos",
-      "contact_description": "Rellena el formulario y nuestro equipo te responderá en menos de 24 horas.",
-      "contact_name": "Nombre",
-      "contact_lastname": "Apellido",
-      "contact_email": "Correo electrónico",
-      "contact_phone": "Teléfono",
-      "contact_message": "Mensaje",
-      "contact_message_placeholder": "Escribe tu mensaje aquí",
-      "contact_send": "Enviar",
-      "services_title": "Servicios",
-      "process_title": "Proceso",
-      "slide1_text": "Diseñamos experiencias deportivas únicas para equipos que siguen jugando con pasión.",
-      "slide2_text": "Viaja, compite y vive el deporte como un legendario.",
-      "slide3_text": "Descubre nuevos horizontes y desafía tus límites.",
-      "slide4_text": "Conquista el campo y deja tu huella en la historia.",
-      "service_accommodation": "Alojamiento",
+  "welcome": "Bienvenido",
+  "contact_title": "Contacto",
+  "contact_subtitle": "Contáctanos",
+  "contact_description": "Rellena el formulario y nuestro equipo te responderá en menos de 24 horas.",
+  "contact_name": "Nombre",
+  "contact_lastname": "Apellido",
+  "contact_email": "Correo electrónico",
+  "contact_phone": "Teléfono",
+  "contact_message": "Mensaje",
+  "contact_message_placeholder": "Escribe tu mensaje aquí",
+  "contact_send": "Enviar",
+  "services_title": "Servicios",
+  "process_title": "Proceso",
+  "slide1_text": "Diseñamos experiencias deportivas únicas para equipos que siguen jugando con pasión.",
+  "slide2_text": "Viaja, compite y vive el deporte como un legendario.",
+  "slide3_text": "Descubre nuevos horizontes y desafía tus límites.",
+  "slide4_text": "Conquista el campo y deja tu huella en la historia.",
+  "service_accommodation": "Alojamiento",
   "service_accommodation_desc": "Habitaciones cómodas para tu equipo",
   "service_accommodation_descLong": "Nuestro servicio de alojamiento ofrece habitaciones modernas y cómodas diseñadas específicamente para equipos deportivos. Disfruta de áreas de convivencia amplias, conexión Wi-Fi de alta velocidad, opciones de alimentación nutritiva y fácil acceso a los instalaciones de entrenamiento. Nos aseguramos de que tu equipo tenga un ambiente de descanso para que pueda centrarse en su rendimiento y recuperación.",
   "service_transport": "Transporte",
@@ -46,7 +46,7 @@
   "howwework_arrival": "Llegada",
   "howwework_arrival_desc": "Bienvenido y comienza tu aventura",
   "howwework_celebration": "Celebración",
-  "howwework_celebration_desc": "Disfruta del partido y la fiesta", 
+  "howwework_celebration_desc": "Disfruta del partido y la fiesta",
   "howwework_play": "Jugar",
   "howwework_play_desc": "Juega con los mejores equipos",
   "footer_description": "Especialistas en turismo deportivo para equipos de rugby y hockey veteranos en la Comunidad Valenciana y Costa del Sol.",
@@ -59,7 +59,7 @@
   "experience_rugby_sport": "Rugby",
   "experience_rugby_country": "España",
   "experience_rugby_story": "Fuimos por el torneo... y volvimos con agujetas de tanto reírnos. La organización fue impecable: desde el primer mail hasta la última cerveza. Se nota que quien está detrás entiende lo que es el rugby, lo que es un tercer tiempo de verdad y lo que necesitamos los veteranos para disfrutar sin presión. Jugamos partidos intensos pero sin locuras, comimos como reyes, y el hotel tenía hasta sitio para estirar después de los partidos (aunque algunos lo usamos para siestas). Volveríamos con los ojos cerrados. Ah, y ganamos el premio al equipo con más tiempo en la barra. Merecido.",
-  "experience_rugby_name": "Carlos “Chino” R., capitán del Valencia Veterans RFC",
+  "experience_rugby_name": "Carlos 'Chino' R., capitán del Valencia Veterans RFC",
   "experience_hockey_male_team": "Amsterdam HC",
   "experience_hockey_male_sport": "Hockey Masculino",
   "experience_hockey_male_country": "Países Bajos",
@@ -73,5 +73,21 @@
   "counters_teamsTrustedUs": "Equipos que confiaron en nosotros",
   "counters_playersImpacted": "Jugadores impactados",
   "counters_queriesAnswered": "Consultas respondidas",
-  "counters_countriesReached": "Países alcanzados"
+  "counters_countriesReached": "Países alcanzados",
+  "contact_tournament_message": "Hola, quisiera más información sobre el torneo \"{{tournament}}\". ¡Gracias!",
+  "upcoming_tournaments_title": "Próximos torneos",
+  "upcoming_tournaments_description": "Organizamos los siguientes torneos en los próximos meses. Si estás interesado en participar, contáctanos.",
+  "trusted_teams_title": "Equipos que confían en nosotros",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Equipo masculino, liga nacional.",
+  "trusted_teams_description_2": "Equipo femenino, campeonas regionales.",
+  "trusted_teams_description_3": "Equipo senior, amistosos internacionales.",
+  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
+  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
+  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
+  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
+  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
+  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
 }
