--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,77 +1,93 @@
 {
-    "welcome": "Bienvenue",
-      "contact_title": "Contact",
-      "contact_subtitle": "Contactez-nous",
-      "contact_description": "Remplissez le formulaire et notre équipe vous répondra dans les 24 heures.",
-      "contact_name": "Prénom",
-      "contact_lastname": "Nom",
-      "contact_email": "E-mail",
-      "contact_phone": "Téléphone",
-      "contact_message": "Message",
-    "contact_message_placeholder": "Écrivez votre message ici",
-    "contact_send": "Envoyer",
-    "services_title": "Services",
-    "process_title": "Process",
-    "slide1_text": "Nous concevons des expériences sportives uniques pour les équipes qui continuent de jouer avec passion.",
-    "slide2_text": "Voyagez, compétitionz et vivez le sport comme un légendaire.",
-    "slide3_text": "Découvrez de nouveaux horizons et testez vos limites.",
-    "slide4_text": "Conquérez le terrain et laissez votre marque dans l'histoire.",
-    "service_accommodation": "Hébergement",
-    "service_accommodation_desc": "Chambres confortables pour votre équipe",
-    "service_accommodation_descLong": "Notre service d'hébergement offre des chambres modernes et confortables conçues spécifiquement pour les équipes sportives. Profitez d'espaces de convivence spacieux, d'accès à Internet haut débit, d'options alimentaires nutritives et d'un accès facile aux installations d'entraînement. Nous nous assurons qu'un environnement de repos permet à votre équipe de se concentrer sur ses performances et sa récupération.",
-    "service_transport": "Transport",
-    "service_transport_desc": "Transferts sécurisés et ponctuels",
-    "service_transport_descLong": "Nous offrons des transferts sécurisés et ponctuels avec notre parc de véhicules modernes. Nos conducteurs expérimentés nous assurons que votre équipe arrive à temps à chaque match, session d'entraînement ou événement. Tous les véhicules sont équipés d'air conditionné, d'espace pour équipements et de sièges confortables pour de longues journées.",
-    "service_matches": "Matches",
-    "service_matches_desc": "Compétitionz avec des équipes internationales",
-    "service_matches_descLong": "Participez à des matchs amicaux et compétitifs contre des équipes locales et internationales. Nous organisons des matchs adaptés à votre niveau et à vos objectifs, y compris des arbitres, des terrains officiels et des analyses post-match. Vivez l'émotion de la compétition internationale et construisez des relations sportives durables.",
-    "service_training": "Entraînement",
-    "service_training_desc": "Sessions guidées par des professionnels",
-    "service_training_descLong": "Nos sessions d'entraînement sont guidées par des professionnels et adaptées aux besoins de votre équipe. Accédez à des installations de haute qualité, à des programmes personnalisés et à la dernière technologie sportive. Améliorez vos compétences, tactiques et cohésion de l'équipe grâce à la direction d'experts et à un environnement motivant.",
-    "service_tours": "Tours",
-    "service_tours_desc": "Découvrez la ville et la culture",
-    "service_tours_descLong": "Découvrez la ville et sa culture avec nos guides. Explorez les lieux historiques, profitez de la nourriture locale et vivez l'atmosphère animée de Valence. Nos visites sont conçues pour offrir une relaxation et un enrichissement culturel entre vos engagements sportifs.",
-    "service_other": "Autres",
-    "service_other_desc": "Services supplémentaires pour votre confort",
-    "service_other_descLong": "Nous offrons une gamme de services supplémentaires pour améliorer votre séjour, y compris l'assistance médicale, la blanchisserie, le matériel de location et le support 24/7. Notre équipe est dédiée à garantir votre confort et à répondre à toutes les exigences spéciales que votre groupe peut avoir lors de son voyage sportif.",
-    "hero_title": "TOURISME SPORTIF À VALENCIA",
-    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
-    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
-    "how_we_work": "Comment nous travaillons",  
-    "experiences": "Expériences",
-    "howwework_contact": "Contact",
-    "howwework_contact_desc": "Contactez-nous",
-    "howwework_design": "Planifier le voyage",
-    "howwework_design_desc": "Nous planifions votre expérience parfaite",
-    "howwework_arrival": "Arrivée",
-    "howwework_arrival_desc": "Bienvenue et commencez votre aventure",
-    "howwework_celebration": "Fête",
-    "howwework_play": "Jouer",
-    "howwework_play_desc": "Jouez avec les meilleures équipes",
-    "howwework_celebration_desc": "Profitez du match et de la fête",
-    "footer_description": "Spécialistes du tourisme sportif pour les équipes de rugby et de hockey vétérans dans la Communauté Valencienne et la Costa del Sol.",
-    "footer_quick_links": "Liens rapides",
-    "footer_contact": "Contact",
-    "footer_rights": "Tous droits réservés.",
-    "contact_success": "Votre message a été envoyé avec succès.",
-    "contact_error": "Une erreur est survenue. Veuillez réessayer.",
-    "experience_rugby_team": "Valencia Veterans RFC",
-    "experience_rugby_sport": "Rugby",
-    "experience_rugby_country": "Espagne",
-    "experience_rugby_story": "Nous sommes partis pour le tournoi... et nous sommes revenus avec des courbatures à force de rire. L'organisation était impeccable : du premier mail à la dernière bière. On sent que ceux qui organisent comprennent ce qu'est le rugby, ce qu'est une vraie troisième mi-temps et ce dont les vétérans ont besoin pour profiter sans pression. Nous avons joué des matchs intenses mais sans excès, mangé comme des rois, et l'hôtel avait même un espace pour s'étirer après les matchs (certains l'ont utilisé pour faire la sieste). Nous reviendrions les yeux fermés. Ah, et nous avons gagné le prix de l'équipe qui a passé le plus de temps au bar. Bien mérité.",
-    "experience_rugby_name": "Carlos \"Chino\" R., capitaine du Valencia Veterans RFC",
-    "experience_hockey_male_team": "Amsterdam HC",
-    "experience_hockey_male_sport": "Hockey Masculin",
-    "experience_hockey_male_country": "Pays-Bas",
-    "experience_hockey_male_story": "Nous ne savions pas si nous allions courir plus sur le terrain ou de bar en bar. Finalement, nous avons fait les deux. C'était un voyage spectaculaire, tout était organisé dans les moindres détails mais avec de la flexibilité. Les organisateurs étaient des gens du sport, ça se sent : ils comprennent notre rythme, nos blagues et nos blessures. Le tournoi avait un bon niveau, mais sans stress. Nous avons rencontré des équipes de toute l'Europe et avons fini par danser avec elles dans une cave au bord de la mer. Un luxe ! Nous demandons déjà des infos pour l'édition de l'année prochaine. En espérant revenir avec la même équipe.",
-    "experience_hockey_male_name": "Jeroen V., gardien vétéran de l'Amsterdam HC",
-    "experience_hockey_female_team": "London Ladies HC",
-    "experience_hockey_female_sport": "Hockey Féminin",
-    "experience_hockey_female_country": "Royaume-Uni",
-    "experience_hockey_female_story": "Qu'est-ce qu'on s'est amusées ! C'était un mélange de compétition, de tourisme et de rires à toute heure. Nous avons eu des matchs disputés mais très amusants, et en dehors du terrain, l'attention était impeccable. Tout ce qu'il faut quand on voyage avec un groupe de femmes de plus de 40 ans : bonne nourriture, lits confortables et un plan pour trinquer à la fin de la journée. L'organisation était assurée par des gens qui parlent notre langue (celle du sport, bien sûr). Nous sommes déjà en train de préparer de nouveaux maillots... car nous reviendrons sûrement. Merci de nous avoir traitées comme des joueuses, des amies et des voyageuses à la fois !",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC",
-    "counters_teamsTrustedUs": "Équipes qui nous ont fait confiance",
-    "counters_playersImpacted": "Joueurs impactés",
-    "counters_queriesAnswered": "Questions répondues",
-    "counters_countriesReached": "Pays atteints"
-    }
+  "welcome": "Bienvenue",
+  "contact_title": "Contact",
+  "contact_subtitle": "Contactez-nous",
+  "contact_description": "Remplissez le formulaire et notre équipe vous répondra dans les 24 heures.",
+  "contact_name": "Prénom",
+  "contact_lastname": "Nom",
+  "contact_email": "E-mail",
+  "contact_phone": "Téléphone",
+  "contact_message": "Message",
+  "contact_message_placeholder": "Écrivez votre message ici",
+  "contact_send": "Envoyer",
+  "services_title": "Services",
+  "process_title": "Process",
+  "slide1_text": "Nous concevons des expériences sportives uniques pour les équipes qui continuent de jouer avec passion.",
+  "slide2_text": "Voyagez, compétitionz et vivez le sport comme un légendaire.",
+  "slide3_text": "Découvrez de nouveaux horizons et testez vos limites.",
+  "slide4_text": "Conquérez le terrain et laissez votre marque dans l'histoire.",
+  "service_accommodation": "Hébergement",
+  "service_accommodation_desc": "Chambres confortables pour votre équipe",
+  "service_accommodation_descLong": "Notre service d'hébergement offre des chambres modernes et confortables conçues spécifiquement pour les équipes sportives. Profitez d'espaces de convivence spacieux, d'accès à Internet haut débit, d'options alimentaires nutritives et d'un accès facile aux installations d'entraînement. Nous nous assurons qu'un environnement de repos permet à votre équipe de se concentrer sur ses performances et sa récupération.",
+  "service_transport": "Transport",
+  "service_transport_desc": "Transferts sécurisés et ponctuels",
+  "service_transport_descLong": "Nous offrons des transferts sécurisés et ponctuels avec notre parc de véhicules modernes. Nos conducteurs expérimentés nous assurons que votre équipe arrive à temps à chaque match, session d'entraînement ou événement. Tous les véhicules sont équipés d'air conditionné, d'espace pour équipements et de sièges confortables pour de longues journées.",
+  "service_matches": "Matches",
+  "service_matches_desc": "Compétitionz avec des équipes internationales",
+  "service_matches_descLong": "Participez à des matchs amicaux et compétitifs contre des équipes locales et internationales. Nous organisons des matchs adaptés à votre niveau et à vos objectifs, y compris des arbitres, des terrains officiels et des analyses post-match. Vivez l'émotion de la compétition internationale et construisez des relations sportives durables.",
+  "service_training": "Entraînement",
+  "service_training_desc": "Sessions guidées par des professionnels",
+  "service_training_descLong": "Nos sessions d'entraînement sont guidées par des professionnels et adaptées aux besoins de votre équipe. Accédez à des installations de haute qualité, à des programmes personnalisés et à la dernière technologie sportive. Améliorez vos compétences, tactiques et cohésion de l'équipe grâce à la direction d'experts et à un environnement motivant.",
+  "service_tours": "Tours",
+  "service_tours_desc": "Découvrez la ville et la culture",
+  "service_tours_descLong": "Découvrez la ville et sa culture avec nos guides. Explorez les lieux historiques, profitez de la nourriture locale et vivez l'atmosphère animée de Valence. Nos visites sont conçues pour offrir une relaxation et un enrichissement culturel entre vos engagements sportifs.",
+  "service_other": "Autres",
+  "service_other_desc": "Services supplémentaires pour votre confort",
+  "service_other_descLong": "Nous offrons une gamme de services supplémentaires pour améliorer votre séjour, y compris l'assistance médicale, la blanchisserie, le matériel de location et le support 24/7. Notre équipe est dédiée à garantir votre confort et à répondre à toutes les exigences spéciales que votre groupe peut avoir lors de son voyage sportif.",
+  "hero_title": "TOURISME SPORTIF À VALENCIA",
+  "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
+  "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+  "how_we_work": "Comment nous travaillons",
+  "experiences": "Expériences",
+  "howwework_contact": "Contact",
+  "howwework_contact_desc": "Contactez-nous",
+  "howwework_design": "Planifier le voyage",
+  "howwework_design_desc": "Nous planifions votre expérience parfaite",
+  "howwework_arrival": "Arrivée",
+  "howwework_arrival_desc": "Bienvenue et commencez votre aventure",
+  "howwework_celebration": "Fête",
+  "howwework_play": "Jouer",
+  "howwework_play_desc": "Jouez avec les meilleures équipes",
+  "howwework_celebration_desc": "Profitez du match et de la fête",
+  "footer_description": "Spécialistes du tourisme sportif pour les équipes de rugby et de hockey vétérans dans la Communauté Valencienne et la Costa del Sol.",
+  "footer_quick_links": "Liens rapides",
+  "footer_contact": "Contact",
+  "footer_rights": "Tous droits réservés.",
+  "contact_success": "Votre message a été envoyé avec succès.",
+  "contact_error": "Une erreur est survenue. Veuillez réessayer.",
+  "experience_rugby_team": "Valencia Veterans RFC",
+  "experience_rugby_sport": "Rugby",
+  "experience_rugby_country": "Espagne",
+  "experience_rugby_story": "Nous sommes partis pour le tournoi... et nous sommes revenus avec des courbatures à force de rire. L'organisation était impeccable : du premier mail à la dernière bière. On sent que ceux qui organisent comprennent ce qu'est le rugby, ce qu'est une vraie troisième mi-temps et ce dont les vétérans ont besoin pour profiter sans pression. Nous avons joué des matchs intenses mais sans excès, mangé comme des rois, et l'hôtel avait même un espace pour s'étirer après les matchs (certains l'ont utilisé pour faire la sieste). Nous reviendrions les yeux fermés. Ah, et nous avons gagné le prix de l'équipe qui a passé le plus de temps au bar. Bien mérité.",
+  "experience_rugby_name": "Carlos \"Chino\" R., capitaine du Valencia Veterans RFC",
+  "experience_hockey_male_team": "Amsterdam HC",
+  "experience_hockey_male_sport": "Hockey Masculin",
+  "experience_hockey_male_country": "Pays-Bas",
+  "experience_hockey_male_story": "Nous ne savions pas si nous allions courir plus sur le terrain ou de bar en bar. Finalement, nous avons fait les deux. C'était un voyage spectaculaire, tout était organisé dans les moindres détails mais avec de la flexibilité. Les organisateurs étaient des gens du sport, ça se sent : ils comprennent notre rythme, nos blagues et nos blessures. Le tournoi avait un bon niveau, mais sans stress. Nous avons rencontré des équipes de toute l'Europe et avons fini par danser avec elles dans une cave au bord de la mer. Un luxe ! Nous demandons déjà des infos pour l'édition de l'année prochaine. En espérant revenir avec la même équipe.",
+  "experience_hockey_male_name": "Jeroen V., gardien vétéran de l'Amsterdam HC",
+  "experience_hockey_female_team": "London Ladies HC",
+  "experience_hockey_female_sport": "Hockey Féminin",
+  "experience_hockey_female_country": "Royaume-Uni",
+  "experience_hockey_female_story": "Qu'est-ce qu'on s'est amusées ! C'était un mélange de compétition, de tourisme et de rires à toute heure. Nous avons eu des matchs disputés mais très amusants, et en dehors du terrain, l'attention était impeccable. Tout ce qu'il faut quand on voyage avec un groupe de femmes de plus de 40 ans : bonne nourriture, lits confortables et un plan pour trinquer à la fin de la journée. L'organisation était assurée par des gens qui parlent notre langue (celle du sport, bien sûr). Nous sommes déjà en train de préparer de nouveaux maillots... car nous reviendrons sûrement. Merci de nous avoir traitées comme des joueuses, des amies et des voyageuses à la fois !",
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Équipes qui nous ont fait confiance",
+  "counters_playersImpacted": "Joueurs impactés",
+  "counters_queriesAnswered": "Questions répondues",
+  "counters_countriesReached": "Pays atteints",
+  "contact_tournament_message": "Bonjour, je souhaiterais plus d'informations sur le tournoi \"{{tournament}}\". Merci !",
+  "upcoming_tournaments_title": "Prochains tournois",
+  "upcoming_tournaments_description": "Nous organisons les tournois suivants dans les prochains mois. Si vous êtes intéressés à participer, veuillez nous contacter.",
+  "trusted_teams_title": "Équipes qui nous ont fait confiance",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Équipe masculine, ligue nationale.",
+  "trusted_teams_description_2": "Équipe féminine, championnes régionales.",
+  "trusted_teams_description_3": "Équipe senior, matchs amicaux internationaux.",
+  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
+  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
+  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
+  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
+  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
+  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+}
