--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -1,74 +1,90 @@
 {
-    "welcome": "Benvenuto",
-      "contact_title": "Contatto",
-      "contact_subtitle": "Contattaci",
-      "contact_description": "Compila il modulo e il nostro team ti risponderà entro 24 ore.",
-      "contact_name": "Nome",
-      "contact_lastname": "Cognome",
-      "contact_email": "Email",
-      "contact_phone": "Telefono",
-      "contact_message": "Messaggio",
-    "contact_message_placeholder": "Scrivi qui il tuo messaggio",
-    "contact_send": "Invia",
-    "services_title": "Servizi",
-    "process_title": "Processo",
-    "slide1_text": "Siamo in grado di progettare esperienze sportive uniche per squadre che continuano a giocare con passione.",
-    "slide2_text": "Viaggi, competizioni e vita del sport come un leggenda.",
-    "slide3_text": "Scopri nuovi orizzonti e sfida i tuoi limiti.",
-    "slide4_text": "Conquista il campo e lascia la tua traccia nella storia.",
-    "service_accommodation": "Alloggio",
-    "service_accommodation_desc": "Stanze confortevoli per il tuo team",
-    "service_accommodation_descLong": "Il nostro servizio di alloggio offre stanze moderne e comode progettate specificamente per squadre sportive. Goditi spazi di convivenza ampi, accesso a Internet ad alta velocità, opzioni alimentari nutriente e facile accesso alle installazioni di allenamento. Ci assicuriamo che il tuo team abbia un ambiente di riposo per poter concentrarsi sulle sue prestazioni e la sua ripristino.",
-    "service_transport": "Trasporto",
-    "service_transport_desc": "Trasferimenti sicuri e puntuali",
-    "service_transport_descLong": "Offriamo trasferimenti sicuri e puntuali con il nostro parco di veicoli moderni. I nostri autisti esperti ci assicurano che il tuo team arrivi a tempo a ogni partita, sessione di allenamento o evento. Tutti i veicoli sono equipaggiati con aria condizionata, spazio per attrezzature e sedili confortevoli per lunghi giorni.",
-    "service_matches": "Partite",
-    "service_matches_desc": "Competi con squadre internazionali",
-    "service_training": "Allenamento",
-    "service_training_desc": "Sessioni guidate da professionisti",
-    "service_training_descLong": "Le nostre sessioni di allenamento sono guidate da professionisti e adattate alle esigenze del tuo team. Accedi a installazioni di alta qualità, programmi personalizzati e la tecnologia sportiva più recente. Migliora le tue abilità, tattiche e coesione del team grazie alla guida di esperti e un ambiente motivante.",
-    "service_tours": "Tours",
-    "service_tours_desc": "Scopri la città e la cultura",
-    "service_other": "Altro",
-    "service_other_desc": "Servizi extra per il tuo comfort",
-    "hero_title": "TOURISMO SPORTIF À VALENCIA",
-    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
-    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
-    "how_we_work": "Comment nous travaillons",
-    "experiences": "Expériences",
-    "howwework_contact": "Contatto",
-    "howwework_contact_desc": "Contattaci",
-    "howwework_design": "Progetta il viaggio",
-    "howwework_design_desc": "Pianifichiamo la tua esperienza perfetta",
-    "howwework_arrival": "Arrivo",
-    "howwework_arrival_desc": "Benvenuto e inizia la tua avventura",
-    "howwework_celebration": "Festa",
-    "howwework_celebration_desc": "Goditi il match e la festa",
-    "howwework_play": "Giocare",
-    "howwework_play_desc": "Gioca con i migliori team",
-    "footer_description": "Specialisti in turismo sportivo per squadre di rugby e hockey veterani nella Comunità Valenciana e la Costa del Sol.",
-    "footer_quick_links": "Collegamenti rapidi",
-    "footer_contact": "Contatto",
-    "footer_rights": "Tutti i diritti riservati.",
-    "contact_success": "Il tuo messaggio è stato inviato con successo.",
-    "contact_error": "Si è verificato un errore. Per favore, riprova.",
-    "experience_rugby_team": "Valencia Veterans RFC",
-    "experience_rugby_sport": "Rugby",
-    "experience_rugby_country": "España",
-    "experience_rugby_story": "Siamo andati per il torneo... e siamo tornati con i muscoli indolenziti dal tanto ridere. L'organizzazione è stata impeccabile: dalla prima email all'ultima birra. Si vede che chi c'è dietro capisce cos'è il rugby, cos'è un vero terzo tempo e di cosa hanno bisogno i veterani per divertirsi senza pressioni. Abbiamo giocato partite intense ma senza esagerare, mangiato come re e l'hotel aveva persino uno spazio per allungarsi dopo le partite (anche se alcuni di noi lo hanno usato per i pisolini). Torneremmo a occhi chiusi. Ah, e abbiamo vinto il premio per la squadra che ha passato più tempo al bar. Meritatissimo.",
-    "experience_rugby_name": "Carlos “Chino” R., capitano del Valencia Veterans RFC",
-    "experience_hockey_male_team": "Amsterdam HC",
-    "experience_hockey_male_sport": "Hockey Maschile",
-    "experience_hockey_male_country": "Paesi Bassi",
-    "experience_hockey_male_story": "Non sapevamo se avremmo corso di più in campo o da un bar all'altro. Alla fine abbiamo fatto entrambe le cose. È stato un viaggio spettacolare, tutto organizzato nei minimi dettagli ma con flessibilità. Gli organizzatori erano gente di sport, si nota: capiscono i nostri ritmi, le nostre battute e i nostri acciacchi. Il torneo aveva un buon livello, ma senza stress. Abbiamo conosciuto squadre da tutta Europa e abbiamo finito per ballare con loro in una cantina sul mare. Un sogno! Stiamo già chiedendo informazioni per l'edizione dell'anno prossimo. Speriamo di poter tornare con la stessa squadra.",
-    "experience_hockey_male_name": "Jeroen V., portiere veterano dell'Amsterdam HC",
-    "experience_hockey_female_team": "London Ladies HC",
-    "experience_hockey_female_sport": "Hockey Femminile",
-    "experience_hockey_female_country": "Regno Unito",
-    "experience_hockey_female_story": "Ci siamo divertite tantissimo! È stata una combinazione di competizione, turismo e risate a tutte le ore. Abbiamo giocato partite combattute ma molto divertenti, e fuori dal campo l'attenzione è stata impeccabile. Tutto quello che serve quando si viaggia con un gruppo di donne over 40: buon cibo, letti comodi e qualche piano per brindare a fine giornata. L'organizzazione era fatta da persone che parlano la nostra stessa lingua (quella dello sport, ovviamente). Stiamo già organizzando nuove magliette... perché sicuramente torneremo. Grazie per averci trattato come giocatrici, amiche e viaggiatrici allo stesso tempo!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC",
-    "counters_teamsTrustedUs": "Squadre che si sono fidate di noi",
+  "welcome": "Benvenuto",
+  "contact_title": "Contatto",
+  "contact_subtitle": "Contattaci",
+  "contact_description": "Compila il modulo e il nostro team ti risponderà entro 24 ore.",
+  "contact_name": "Nome",
+  "contact_lastname": "Cognome",
+  "contact_email": "Email",
+  "contact_phone": "Telefono",
+  "contact_message": "Messaggio",
+  "contact_message_placeholder": "Scrivi qui il tuo messaggio",
+  "contact_send": "Invia",
+  "services_title": "Servizi",
+  "process_title": "Processo",
+  "slide1_text": "Siamo in grado di progettare esperienze sportive uniche per squadre che continuano a giocare con passione.",
+  "slide2_text": "Viaggi, competizioni e vita del sport come un leggenda.",
+  "slide3_text": "Scopri nuovi orizzonti e sfida i tuoi limiti.",
+  "slide4_text": "Conquista il campo e lascia la tua traccia nella storia.",
+  "service_accommodation": "Alloggio",
+  "service_accommodation_desc": "Stanze confortevoli per il tuo team",
+  "service_accommodation_descLong": "Il nostro servizio di alloggio offre stanze moderne e comode progettate specificamente per squadre sportive. Goditi spazi di convivenza ampi, accesso a Internet ad alta velocità, opzioni alimentari nutriente e facile accesso alle installazioni di allenamento. Ci assicuriamo che il tuo team abbia un ambiente di riposo per poter concentrarsi sulle sue prestazioni e la sua ripristino.",
+  "service_transport": "Trasporto",
+  "service_transport_desc": "Trasferimenti sicuri e puntuali",
+  "service_transport_descLong": "Offriamo trasferimenti sicuri e puntuali con il nostro parco di veicoli moderni. I nostri autisti esperti ci assicurano che il tuo team arrivi a tempo a ogni partita, sessione di allenamento o evento. Tutti i veicoli sono equipaggiati con aria condizionata, spazio per attrezzature e sedili confortevoli per lunghi giorni.",
+  "service_matches": "Partite",
+  "service_matches_desc": "Competi con squadre internazionali",
+  "service_training": "Allenamento",
+  "service_training_desc": "Sessioni guidate da professionisti",
+  "service_training_descLong": "Le nostre sessioni di allenamento sono guidate da professionisti e adattate alle esigenze del tuo team. Accedi a installazioni di alta qualità, programmi personalizzati e la tecnologia sportiva più recente. Migliora le tue abilità, tattiche e coesione del team grazie alla guida di esperti e un ambiente motivante.",
+  "service_tours": "Tours",
+  "service_tours_desc": "Scopri la città e la cultura",
+  "service_other": "Altro",
+  "service_other_desc": "Servizi extra per il tuo comfort",
+  "hero_title": "TOURISMO SPORTIF À VALENCIA",
+  "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
+  "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+  "how_we_work": "Comment nous travaillons",
+  "experiences": "Expériences",
+  "howwework_contact": "Contatto",
+  "howwework_contact_desc": "Contattaci",
+  "howwework_design": "Progetta il viaggio",
+  "howwework_design_desc": "Pianifichiamo la tua esperienza perfetta",
+  "howwework_arrival": "Arrivo",
+  "howwework_arrival_desc": "Benvenuto e inizia la tua avventura",
+  "howwework_celebration": "Festa",
+  "howwework_celebration_desc": "Goditi il match e la festa",
+  "howwework_play": "Giocare",
+  "howwework_play_desc": "Gioca con i migliori team",
+  "footer_description": "Specialisti in turismo sportivo per squadre di rugby e hockey veterani nella Comunità Valenciana e la Costa del Sol.",
+  "footer_quick_links": "Collegamenti rapidi",
+  "footer_contact": "Contatto",
+  "footer_rights": "Tutti i diritti riservati.",
+  "contact_success": "Il tuo messaggio è stato inviato con successo.",
+  "contact_error": "Si è verificato un errore. Per favore, riprova.",
+  "experience_rugby_team": "Valencia Veterans RFC",
+  "experience_rugby_sport": "Rugby",
+  "experience_rugby_country": "España",
+  "experience_rugby_story": "Siamo andati per il torneo... e siamo tornati con i muscoli indolenziti dal tanto ridere. L'organizzazione è stata impeccabile: dalla prima email all'ultima birra. Si vede che chi c'è dietro capisce cos'è il rugby, cos'è un vero terzo tempo e di cosa hanno bisogno i veterani per divertirsi senza pressioni. Abbiamo giocato partite intense ma senza esagerare, mangiato come re e l'hotel aveva persino uno spazio per allungarsi dopo le partite (anche se alcuni di noi lo hanno usato per i pisolini). Torneremmo a occhi chiusi. Ah, e abbiamo vinto il premio per la squadra che ha passato più tempo al bar. Meritatissimo.",
+  "experience_rugby_name": "Carlos “Chino” R., capitano del Valencia Veterans RFC",
+  "experience_hockey_male_team": "Amsterdam HC",
+  "experience_hockey_male_sport": "Hockey Maschile",
+  "experience_hockey_male_country": "Paesi Bassi",
+  "experience_hockey_male_story": "Non sapevamo se avremmo corso di più in campo o da un bar all'altro. Alla fine abbiamo fatto entrambe le cose. È stato un viaggio spettacolare, tutto organizzato nei minimi dettagli ma con flessibilità. Gli organizzatori erano gente di sport, si nota: capiscono i nostri ritmi, le nostre battute e i nostri acciacchi. Il torneo aveva un buon livello, ma senza stress. Abbiamo conosciuto squadre da tutta Europa e abbiamo finito per ballare con loro in una cantina sul mare. Un sogno! Stiamo già chiedendo informazioni per l'edizione dell'anno prossimo. Speriamo di poter tornare con la stessa squadra.",
+  "experience_hockey_male_name": "Jeroen V., portiere veterano dell'Amsterdam HC",
+  "experience_hockey_female_team": "London Ladies HC",
+  "experience_hockey_female_sport": "Hockey Femminile",
+  "experience_hockey_female_country": "Regno Unito",
+  "experience_hockey_female_story": "Ci siamo divertite tantissimo! È stata una combinazione di competizione, turismo e risate a tutte le ore. Abbiamo giocato partite combattute ma molto divertenti, e fuori dal campo l'attenzione è stata impeccabile. Tutto quello che serve quando si viaggia con un gruppo di donne over 40: buon cibo, letti comodi e qualche piano per brindare a fine giornata. L'organizzazione era fatta da persone che parlano la nostra stessa lingua (quella dello sport, ovviamente). Stiamo già organizzando nuove magliette... perché sicuramente torneremo. Grazie per averci trattato come giocatrici, amiche e viaggiatrici allo stesso tempo!",
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Squadre che si sono fidate di noi",
   "counters_playersImpacted": "Giocatori impattati",
   "counters_queriesAnswered": "Domande risposte",
-  "counters_countriesReached": "Paesi raggiunti"
-    }
+  "counters_countriesReached": "Paesi raggiunti",
+  "contact_tournament_message": "Ciao, vorrei maggiori informazioni sul torneo \"{{tournament}}\". Grazie!",
+  "upcoming_tournaments_title": "Prossimi tornei",
+  "upcoming_tournaments_description": "Organizziamo i seguenti tornei nei prossimi mesi. Se sei interessato a partecipare, contattaci.",
+  "trusted_teams_title": "Squadre che si sono fidate di noi",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Squadra maschile, liga nazionale.",
+  "trusted_teams_description_2": "Squadra femminile, campiones regionali.",
+  "trusted_teams_description_3": "Squadra senior, partite amichevoli internazionali.",
+  "upcoming_tournaments_title_1": "Torneo di Hockey Valencia",
+  "upcoming_tournaments_description_1": "Dal 10 al 12 di maggio, Valencia. Categoria sub-18 e assoluta.",
+  "upcoming_tournaments_title_2": "Festival di Rugby Verano",
+  "upcoming_tournaments_description_2": "Dal 20 al 22 di giugno, playa de la Malvarrosa.",
+  "upcoming_tournaments_title_3": "Torneo Internazionale Femminile",
+  "upcoming_tournaments_description_3": "Dal 5 al 7 di luglio, polideportivo municipale."
+}
