--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -1,75 +1,90 @@
-
 {
-    "welcome": "Welkom",
-      "contact_title": "Contact",
-      "contact_subtitle": "Neem contact op",
-      "contact_description": "Vul het formulier in en ons team neemt binnen 24 uur contact met je op.",
-      "contact_name": "Voornaam",
-      "contact_lastname": "Achternaam",
-      "contact_email": "E-mail",
-      "contact_phone": "Telefoon",
-      "contact_message": "Bericht",
-      "contact_message_placeholder": "Typ hier je bericht",
-    "contact_send": "Verzenden",
-    "services_title": "Diensten",
-    "process_title": "Proces",
-    "slide1_text": "We ontwerpen unieke sportervaringen voor teams die nog steeds met passie blijven spelen.",
-    "slide2_text": "Reizen, competeren en sport leven als een legende.",
-    "slide3_text": "Ontdek nieuwe horizons en test je grenzen.",
-    "slide4_text": "Conquer the field and leave your mark in history.",
-    "service_accommodation": "Accommodatie",
-    "service_accommodation_desc": "Comfortabele kamers voor je team",
-    "service_accommodation_descLong": "Ons accommodatieservice biedt moderne, comfortabele kamers die specifiek zijn ontworpen voor sportteams. Geniet van ruime leefruimtes, hoge snelheid Wi-Fi, voedzame maaltijden en eenvoudige toegang tot trainingsfaciliteiten. We zorgen ervoor dat je team een rustige omgeving heeft om zich te concentreren op prestaties en herstel.",
-      "service_transport": "Transport",
-    "service_transport_desc": "Veilige en tijdige overvoeringen",
-    "service_transport_descLong": "We bieden veilige en tijdige overvoeringen met onze moderne bussen en wagens. Onze ervaren chauffeurs zorgen ervoor dat je team op tijd aan elke wedstrijd, training of evenement komt. Alle voertuigen zijn uitgerust met airconditioning, voldoende opslagruimte voor uitrusting en comfortabele zitplaatsen voor lange dagen.",
-    "service_matches": "Wedstrijden",
-    "service_matches_desc": "Competeer met internationale teams",
-    "service_training": "Training",
-    "service_training_desc": "Geleide sessies door professionals",
-    "service_training_descLong": "Onze training sessies worden geleid door professionele coaches en aangepast aan de behoeften van je team. Access top-kwaliteit faciliteiten, gepersonaliseerde programma's en de laatste sporttechnologie. Verbeter je vaardigheden, tactieken en teamcohesie met de leiding van experts en een stimulerende omgeving.",
-    "service_tours": "Rondleidingen",
-    "service_tours_desc": "Ontdek de stad en de cultuur",
-    "service_other": "Andere",
-    "service_other_desc": "Extra diensten voor je comfort",
-    "hero_title": "TOURISME SPORTIF À VALENCIA",
-    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS", 
-    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
-    "how_we_work": "Comment nous travaillons",
-    "experiences": "Expériences",
-    "howwework_contact": "Contact",
-    "howwework_contact_desc": "Contacteer ons",
-    "howwework_design": "Reis ontwerpen",
-    "howwework_design_desc": "We plannen je perfecte ervaring",
-    "howwework_arrival": "Aankomst",
-    "howwework_arrival_desc": "Welkom en begin je avontuur",
-    "howwework_celebration": "Feest",
-    "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid",
-    "howwework_play": "Spelen",
-    "howwework_play_desc": "Speel met de beste teams",
-    "footer_description": "Specialisten in sporttourisme voor veteranenrugby- en hockeyteams in de Valencianische Gemeenschap en de Costa del Sol.",
-    "footer_quick_links": "Snelle links",
-    "footer_contact": "Contact",
-    "footer_rights": "Alle rechten voorbehouden.",
-    "contact_success": "Je bericht is succesvol verzonden.",
-    "contact_error": "Er is een fout opgetreden. Probeer het opnieuw.",
-    "experience_rugby_team": "Valencia Veterans RFC",
-    "experience_rugby_sport": "Rugby",
-    "experience_rugby_country": "España",
-    "experience_rugby_story": "We gingen voor het toernooi... en kwamen terug met steken van lachen. De organisatie was ongelooflijk: van het eerste e-mailtje tot de laatste biertje. Het is duidelijk dat de mensen achter het project rugby begrijpen, wat een derde tijd echt is en wat we veteranen nodig hebben om zonder druk te kunnen genieten. We speelden intense maar niet gekke wedstrijden, aten als koningen, en het hotel had zelfs ruimte voor uitrekken na de wedstrijden (hoewel sommige ons gebruikten voor nachtrust). We zouden teruggaan met onze ogen dicht. Oh, en we wonnen de prijs voor het team met het meeste tijd op de bar. Waardig.",  
-    "experience_rugby_name": "Carlos “Chino” R., capitán del Valencia Veterans RFC",
-    "experience_hockey_male_team": "Amsterdam HC",
-    "experience_hockey_male_sport": "Hockey",
-    "experience_hockey_male_country": "Nederland",
-    "experience_hockey_male_story": "We wisten niet of we meer op het veld zouden rennen of in de bar zouden gaan. Uiteindelijk deden we beide. Het was een geweldige reis, alles gemeten op de details maar met flexibiliteit. De organisatoren waren mensen van het sport, je merkt het: entienden nuestros ritmos, nuestros chistes y nuestras lesiones. El torneo tuvo nivel, pero sin agobios. Conocimos equipos de media Europa, y terminamos bailando con ellos en una bodega al lado del mar. ¡Un lujo! Ya estamos preguntando por la edición del año que viene. Ojalá podamos repetir con la misma tropa.",
-    "experience_hockey_male_name": "Jeroen V., portero veterano del Amsterdam HC",
-    "experience_hockey_female_team": "London Ladies HC",  
-    "experience_hockey_female_sport": "Hockey",
-    "experience_hockey_female_country": "Verenigd Koninkrijk",
-    "experience_hockey_female_story": "We hadden een geweldige tijd! Het was een mengsel van wedstrijd, toerisme en lachjes op elk moment. We hadden intense maar zeer grappige wedstrijden, en buiten het veld de attentie was ongelooflijk. Alles wat je nodig hebt wanneer je reist met een groep vrouwen +40: goede eten, comfortabele bedden en een plan om te borrelen aan het einde van de dag. Georganiseerd door mensen die onzezelfde taal spreken (de sporttaal, natuurlijk). We organiseren al nieuwe shirts... omdat we zeker weten dat we terug zullen gaan. Bedankt voor het behandelen van ons als spelers, vrienden en reizigers op hetzelfde moment!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC",
-    "counters_teamsTrustedUs": "Teams die ons vertrouwen",
-    "counters_playersImpacted": "Beïnvloede spelers",
-    "counters_queriesAnswered": "Beantwoorde vragen",
-    "counters_countriesReached": "Bereikte landen"
-    }
+  "welcome": "Welkom",
+  "contact_title": "Contact",
+  "contact_subtitle": "Neem contact op",
+  "contact_description": "Vul het formulier in en ons team neemt binnen 24 uur contact met je op.",
+  "contact_name": "Voornaam",
+  "contact_lastname": "Achternaam",
+  "contact_email": "E-mail",
+  "contact_phone": "Telefoon",
+  "contact_message": "Bericht",
+  "contact_message_placeholder": "Typ hier je bericht",
+  "contact_send": "Verzenden",
+  "services_title": "Diensten",
+  "process_title": "Proces",
+  "slide1_text": "We ontwerpen unieke sportervaringen voor teams die nog steeds met passie blijven spelen.",
+  "slide2_text": "Reizen, competeren en sport leven als een legende.",
+  "slide3_text": "Ontdek nieuwe horizons en test je grenzen.",
+  "slide4_text": "Conquer the field and leave your mark in history.",
+  "service_accommodation": "Accommodatie",
+  "service_accommodation_desc": "Comfortabele kamers voor je team",
+  "service_accommodation_descLong": "Ons accommodatieservice biedt moderne, comfortabele kamers die specifiek zijn ontworpen voor sportteams. Geniet van ruime leefruimtes, hoge snelheid Wi-Fi, voedzame maaltijden en eenvoudige toegang tot trainingsfaciliteiten. We zorgen ervoor dat je team een rustige omgeving heeft om zich te concentreren op prestaties en herstel.",
+  "service_transport": "Transport",
+  "service_transport_desc": "Veilige en tijdige overvoeringen",
+  "service_transport_descLong": "We bieden veilige en tijdige overvoeringen met onze moderne bussen en wagens. Onze ervaren chauffeurs zorgen ervoor dat je team op tijd aan elke wedstrijd, training of evenement komt. Alle voertuigen zijn uitgerust met airconditioning, voldoende opslagruimte voor uitrusting en comfortabele zitplaatsen voor lange dagen.",
+  "service_matches": "Wedstrijden",
+  "service_matches_desc": "Competeer met internationale teams",
+  "service_training": "Training",
+  "service_training_desc": "Geleide sessies door professionals",
+  "service_training_descLong": "Onze training sessies worden geleid door professionele coaches en aangepast aan de behoeften van je team. Access top-kwaliteit faciliteiten, gepersonaliseerde programma's en de laatste sporttechnologie. Verbeter je vaardigheden, tactieken en teamcohesie met de leiding van experts en een stimulerende omgeving.",
+  "service_tours": "Rondleidingen",
+  "service_tours_desc": "Ontdek de stad en de cultuur",
+  "service_other": "Andere",
+  "service_other_desc": "Extra diensten voor je comfort",
+  "hero_title": "TOURISME SPORTIF À VALENCIA",
+  "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
+  "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+  "how_we_work": "Comment nous travaillons",
+  "experiences": "Expériences",
+  "howwework_contact": "Contact",
+  "howwework_contact_desc": "Contacteer ons",
+  "howwework_design": "Reis ontwerpen",
+  "howwework_design_desc": "We plannen je perfecte ervaring",
+  "howwework_arrival": "Aankomst",
+  "howwework_arrival_desc": "Welkom en begin je avontuur",
+  "howwework_celebration": "Feest",
+  "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid",
+  "howwework_play": "Spelen",
+  "howwework_play_desc": "Speel met de beste teams",
+  "footer_description": "Specialisten in sporttourisme voor veteranenrugby- en hockeyteams in de Valencianische Gemeenschap en de Costa del Sol.",
+  "footer_quick_links": "Snelle links",
+  "footer_contact": "Contact",
+  "footer_rights": "Alle rechten voorbehouden.",
+  "contact_success": "Je bericht is succesvol verzonden.",
+  "contact_error": "Er is een fout opgetreden. Probeer het opnieuw.",
+  "experience_rugby_team": "Valencia Veterans RFC",
+  "experience_rugby_sport": "Rugby",
+  "experience_rugby_country": "España",
+  "experience_rugby_story": "We gingen voor het toernooi... en kwamen terug met steken van lachen. De organisatie was ongelooflijk: van het eerste e-mailtje tot de laatste biertje. Het is duidelijk dat de mensen achter het project rugby begrijpen, wat een derde tijd echt is en wat we veteranen nodig hebben om zonder druk te kunnen genieten. We speelden intense maar niet gekke wedstrijden, aten als koningen, en het hotel had zelfs ruimte voor uitrekken na de wedstrijden (hoewel sommige ons gebruikten voor nachtrust). We zouden teruggaan met onze ogen dicht. Oh, en we wonnen de prijs voor het team met het meeste tijd op de bar. Waardig.",
+  "experience_rugby_name": "Carlos “Chino” R., capitán del Valencia Veterans RFC",
+  "experience_hockey_male_team": "Amsterdam HC",
+  "experience_hockey_male_sport": "Hockey",
+  "experience_hockey_male_country": "Nederland",
+  "experience_hockey_male_story": "We wisten niet of we meer op het veld zouden rennen of in de bar zouden gaan. Uiteindelijk deden we beide. Het was een geweldige reis, alles gemeten op de details maar met flexibiliteit. De organisatoren waren mensen van het sport, je merkt het: entienden nuestros ritmos, nuestros chistes y nuestras lesiones. El torneo tuvo nivel, pero sin agobios. Conocimos equipos de media Europa, y terminamos bailando con ellos en una bodega al lado del mar. ¡Un lujo! Ya estamos preguntando por la edición del año que viene. Ojalá podamos repetir con la misma tropa.",
+  "experience_hockey_male_name": "Jeroen V., portero veterano del Amsterdam HC",
+  "experience_hockey_female_team": "London Ladies HC",
+  "experience_hockey_female_sport": "Hockey",
+  "experience_hockey_female_country": "Verenigd Koninkrijk",
+  "experience_hockey_female_story": "We hadden een geweldige tijd! Het was een mengsel van wedstrijd, toerisme en lachjes op elk moment. We hadden intense maar zeer grappige wedstrijden, en buiten het veld de attentie was ongelooflijk. Alles wat je nodig hebt wanneer je reist met een groep vrouwen +40: goede eten, comfortabele bedden en een plan om te borrelen aan het einde van de dag. Georganiseerd door mensen die onzezelfde taal spreken (de sporttaal, natuurlijk). We organiseren al nieuwe shirts... omdat we zeker weten dat we terug zullen gaan. Bedankt voor het behandelen van ons als spelers, vrienden en reizigers op hetzelfde moment!",
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Teams die ons vertrouwen",
+  "counters_playersImpacted": "Beïnvloede spelers",
+  "counters_queriesAnswered": "Beantwoorde vragen",
+  "counters_countriesReached": "Bereikte landen",
+  "contact_tournament_message": "Hallo, ik wil meer informatie over het toernooi \"{{tournament}}\". Bedankt!",
+  "upcoming_tournaments_title": "Komende toernooien",
+  "upcoming_tournaments_description": "We organiseren de volgende toernooien in de komende maanden. Als je wilt meedoen, neem contact op.",
+  "trusted_teams_title": "Teams die ons vertrouwen",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Mannenteam, nationale competitie.",
+  "trusted_teams_description_2": "Vrouwenteam, regionale kampioenen.",
+  "trusted_teams_description_3": "Seniorteam, internationale vriendschappelijke wedstrijden.",
+  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
+  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
+  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
+  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
+  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
+  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+}
